--- a/.github/workflows/unit-mds.yml
+++ b/.github/workflows/unit-mds.yml
@@ -1,88 +1,88 @@
-name: "Metadata-Service-Test"
-
-on:
-    pull_request:
-        types: [opened, reopened]
-        branches:
-            - main
-
-concurrency:
-    group: ${{ github.workflow }}-${{ github.ref }}
-    cancel-in-progress: true
-
-jobs:
-    ZK-Test:
-        strategy:
-            fail-fast: false
-            matrix:
-                java: [8]
-                os: [ubuntu-latest, windows-latest, macos-latest]
-        runs-on: ${{ matrix.os}}
-        env:
-            STORAGE: zookeeper
-            ZOOKEEPER_CONNECTION_STRING: 127.0.0.1:2181
-        steps:
-            - uses: actions/checkout@v2
-            - name: Set up JDK ${{ matrix.java }}
-              uses: actions/setup-java@v1
-              with:
-                  java-version: ${{ matrix.java }}
-
-            - name: Cache Maven packages
-              uses: actions/cache@v2
-              with:
-                  path: ~/.m2
-                  key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-                  restore-keys: ${{ runner.os }}-m2
-
-            - name: Run ZooKeeper
-              uses: ./.github/actions/zookeeperRunner
-            - name: Run test for meta manager
-              run: mvn test -q -Dtest=IMetaManagerTest -DfailIfNoTests=false -P-format
-
-            - name: Run test for sync protocol
-              run: mvn test -q -Dtest=ZooKeeperSyncProtocolTest -DfailIfNoTests=false -P-format
-
-            - uses: codecov/codecov-action@v1
-              with:
-                  file: ./**/target/site/jacoco/jacoco.xml
-                  name: codecov
-
-    ETCD-Test:
-        strategy:
-            fail-fast: false
-            max-parallel: 20
-            matrix:
-                java: [8]
-                os: [ubuntu-latest, windows-latest, macos-latest]
-        runs-on: ${{ matrix.os}}
-        env:
-            STORAGE: etcd
-            ETCD_ENDPOINTS: http://localhost:2379
-        steps:
-            - uses: actions/checkout@v2
-            - name: Set up JDK ${{ matrix.java }}
-              uses: actions/setup-java@v1
-              with:
-                  java-version: ${{ matrix.java }}
-
-            - name: Cache Maven packages
-              uses: actions/cache@v2
-              with:
-                  path: ~/.m2
-                  key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-                  restore-keys: ${{ runner.os }}-m2
-
-            - name: Run ETCD
-              uses: ./.github/actions/etcdRunner
-
-            - name: Run test for meta manager
-              run: mvn test -q -Dtest=IMetaManagerTest -DfailIfNoTests=false -P-format
-
-            - name: Run test for sync protocol
-              run: mvn test -q -Dtest=ETCDSyncProtocolTest -DfailIfNoTests=false -P-format
-
-            - uses: codecov/codecov-action@v1
-              with:
-                  file: ./**/target/site/jacoco/jacoco.xml
-                  name: codecov
+#name: "Metadata-Service-Test"
+#
+#on:
+#    pull_request:
+#        types: [opened, reopened]
+#        branches:
+#            - main
+#
+#concurrency:
+#    group: ${{ github.workflow }}-${{ github.ref }}
+#    cancel-in-progress: true
+#
+#jobs:
+#    ZK-Test:
+#        strategy:
+#            fail-fast: false
+#            matrix:
+#                java: [8]
+#                os: [ubuntu-latest, windows-latest, macos-latest]
+#        runs-on: ${{ matrix.os}}
+#        env:
+#            STORAGE: zookeeper
+#            ZOOKEEPER_CONNECTION_STRING: 127.0.0.1:2181
+#        steps:
+#            - uses: actions/checkout@v2
+#            - name: Set up JDK ${{ matrix.java }}
+#              uses: actions/setup-java@v1
+#              with:
+#                  java-version: ${{ matrix.java }}
+#
+#            - name: Cache Maven packages
+#              uses: actions/cache@v2
+#              with:
+#                  path: ~/.m2
+#                  key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+#                  restore-keys: ${{ runner.os }}-m2
+#
+#            - name: Run ZooKeeper
+#              uses: ./.github/actions/zookeeperRunner
+#            - name: Run test for meta manager
+#              run: mvn test -q -Dtest=IMetaManagerTest -DfailIfNoTests=false -P-format
+#
+#            - name: Run test for sync protocol
+#              run: mvn test -q -Dtest=ZooKeeperSyncProtocolTest -DfailIfNoTests=false -P-format
+#
+#            - uses: codecov/codecov-action@v1
+#              with:
+#                  file: ./**/target/site/jacoco/jacoco.xml
+#                  name: codecov
+#
+#    ETCD-Test:
+#        strategy:
+#            fail-fast: false
+#            max-parallel: 20
+#            matrix:
+#                java: [8]
+#                os: [ubuntu-latest, windows-latest, macos-latest]
+#        runs-on: ${{ matrix.os}}
+#        env:
+#            STORAGE: etcd
+#            ETCD_ENDPOINTS: http://localhost:2379
+#        steps:
+#            - uses: actions/checkout@v2
+#            - name: Set up JDK ${{ matrix.java }}
+#              uses: actions/setup-java@v1
+#              with:
+#                  java-version: ${{ matrix.java }}
+#
+#            - name: Cache Maven packages
+#              uses: actions/cache@v2
+#              with:
+#                  path: ~/.m2
+#                  key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+#                  restore-keys: ${{ runner.os }}-m2
+#
+#            - name: Run ETCD
+#              uses: ./.github/actions/etcdRunner
+#
+#            - name: Run test for meta manager
+#              run: mvn test -q -Dtest=IMetaManagerTest -DfailIfNoTests=false -P-format
+#
+#            - name: Run test for sync protocol
+#              run: mvn test -q -Dtest=ETCDSyncProtocolTest -DfailIfNoTests=false -P-format
+#
+#            - uses: codecov/codecov-action@v1
+#              with:
+#                  file: ./**/target/site/jacoco/jacoco.xml
+#                  name: codecov
