--- a/.github/workflows/upload-binaries.yml
+++ b/.github/workflows/upload-binaries.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
     upload-package:
-        name: Upload Package to Github Release
+        name: Upload to Github Release
         runs-on: ubuntu-latest
         permissions:
             contents: write
@@ -30,7 +30,7 @@ jobs:
                   file_glob: true
                   overwrite: true
     upload-deploy:
-        name: Upload Maven Repository to Github Pages
+        name: Upload to Github Pages
         runs-on: ubuntu-latest
         permissions:
             pull-requests: write
@@ -55,6 +55,10 @@ jobs:
                       -P !format \
                       -DskipTests=true \
                       -Ddeploy.repo.dir=$(pwd)/pages
+            - name: sync README.md and docs
+              run: |
+                  cp README.md pages/
+                  cp -r docs pages/
             - name: create pull request
               uses: peter-evans/create-pull-request@v6
               with:
@@ -62,6 +66,8 @@ jobs:
                   add-paths: |
                       maven-repo
                       maven-snapshot-repo
+                      README.md
+                      docs
                   branch: release-bot/pages
                   delete-branch: true
                   commit-message: "chore(repo): update maven repository"
