--- a/.github/workflows/benchmark-test.yml
+++ b/.github/workflows/benchmark-test.yml
@@ -1,81 +1,81 @@
 name: Benchmark Tests
 
 on:
-  pull_request:
-    types: [opened, reopened]
-    branches:
-      - main
+    push:
+        branches: [main]
 
 env:
-  VERSION: 0.6.0-SNAPSHOT
+    VERSION: 0.6.0-SNAPSHOT
 concurrency:
-  group: ${{ github.workflow }}-${{ github.ref }}
-  cancel-in-progress: true
+    group: ${{ github.workflow }}-${{ github.ref }}
+    cancel-in-progress: true
 
 jobs:
-  Benchmark-Test:
-    timeout-minutes: 35
-    strategy:
-      fail-fast: false
-      matrix:
-        java: [ 8 ]
-        python-version: [ "3.9" ]
-        os: [ ubuntu-latest, macos-latest, windows-latest ]
-        DB-name:
-          [
-            "IoTDB12",
-            "InfluxDB",
-            "Parquet",
-            "PostgreSQL",
-            "FileSystem",
-            "Redis",
-            "MongoDB",
-          ]
-      runs-on: ${{ matrix.os }}
+    Benchmark-Test:
+        timeout-minutes: 35
+        strategy:
+            fail-fast: false
+            matrix:
+                java: [8]
+                python-version: ["3.9"]
+                os: [ubuntu-latest, macos-latest, windows-latest]
+                DB-name:
+                    [
+                        "IoTDB12",
+                        "InfluxDB",
+                        "Parquet",
+                        "PostgreSQL",
+                        "FileSystem",
+                        "Redis",
+                        "MongoDB",
+                    ]
+            runs-on: ${{ matrix.os }}
 
-      steps:
-        - uses: actions/checkout@v2
-        - name: Environment dependence
-          uses: ./.github/actions/dependence
-          with:
-            python-version: ${{ matrix.python-version }}
-            java: ${{ matrix.java }}
+            steps:
+                - name: Print DB name
+                  run: echo ${{ matrix.DB-name }}
 
-        - name: Run ZooKeeper
-          uses: ./.github/actions/zookeeperRunner
+                - uses: actions/checkout@v2
+                - name: Environment dependence
+                  uses: ./.github/actions/dependence
+                  with:
+                      python-version: ${{ matrix.python-version }}
+                      java: ${{ matrix.java }}
 
-        - name: Run DB
-          uses: ./.github/actions/dbRunner
-          with:
-            DB-name: ${{ matrix.DB-name }}
+                - name: Run ZooKeeper
+                  uses: ./.github/actions/zookeeperRunner
 
-        - name: Install IGinX with Maven
-          shell: bash
-          run: |
-            mvn clean package -DskipTests -P-format -q
+                - name: Run DB
+                  uses: ./.github/actions/dbRunner
+                  with:
+                      DB-name: ${{ matrix.DB-name }}
 
-        - name: Change IGinX config
-          uses: ./.github/actions/confWriter
-          with:
-            DB-name: ${{ matrix.DB-name }}
-            Set-Filter-Fragment-OFF: "true"
+                - name: Install IGinX with Maven
+                  shell: bash
+                  run: |
+                      mvn clean package -DskipTests -P-format -q
 
-        # start udf path test first to avoid being effected
-        - name: Start IGinX
-          uses: ./.github/actions/iginxRunner
-          with:
-            version: ${VERSION}
-            if-test-udf: "true"
+                - name: Change IGinX config
+                  uses: ./.github/actions/confWriter
+                  with:
+                      DB-name: ${{ matrix.DB-name }}
+                      Set-Filter-Fragment-OFF: "true"
 
-        - name: Start data cleaning
-          shell: bash
-          run: |
-              chmod +x "${GITHUB_WORKSPACE}/.github/scripts/benchmarks/dataCleaning.sh"
-              "${GITHUB_WORKSPACE}/.github/scripts/benchmarks/dataCleaning.sh"
+                # start udf path test first to avoid being effected
+                - name: Start IGinX
+                  uses: ./.github/actions/iginxRunner
+                  with:
+                      version: ${VERSION}
+                      if-test-udf: "true"
 
-        - name: Show IGinX log
-          if: always()
-          shell: bash
-          run: |
-            cat iginx-*.log
+                - name: Start data cleaning
+                  shell: bash
+                  run: |
+                      chmod +x "${GITHUB_WORKSPACE}/.github/scripts/benchmarks/dataCleaning.sh"
+                      "${GITHUB_WORKSPACE}/.github/scripts/benchmarks/dataCleaning.sh"
 
+                - name: Show IGinX log
+                  if: always()
+                  shell: bash
+                  run: |
+                      cat iginx-*.log
