--- a/conf/config.properties
+++ b/conf/config.properties
@@ -14,13 +14,13 @@ username=root
 password=root
 
 # 数据库列表，使用','分隔不同实例
-storageEngineList=127.0.0.1#6667#iotdb12#username=root#password=root#sessionPoolSize=20#has_data=false#is_read_only=false
+#storageEngineList=127.0.0.1#6667#iotdb12#username=root#password=root#sessionPoolSize=20#has_data=false#is_read_only=false
 #storageEngineList=127.0.0.1#8086#influxdb#url=http://localhost:8086/#token=your-token#organization=your-organization#has_data=false
 #storageEngineList=127.0.0.1#4242#opentsdb#url=http://127.0.0.1
 #storageEngineList=127.0.0.1#5432#timescaledb#username=postgres#password=postgres
 #storageEngineList=127.0.0.1#5432#postgresql#username=postgres#password=postgres#has_data=false
-#storageEngineList=127.0.0.1#6667#parquet#dir=/path/to/your/parquet#dummy_dir=/path/to/your/data#iginx_port=6888#has_data=false#is_read_only=false#thrift_timeout=30000#thrift_pool_max_size=100#thrift_pool_min_evictable_idle_time_millis=600000#write.buffer.size=104857600#write.batch.size=1048576#compact.permits=16#cache.capacity=1073741824#parquet.block.size=134217728#parquet.page.size=8192#parquet.compression=SNAPPY
-#storageEngineList=127.0.0.1#27017#mongodb#has_data=false#schema.sample.size=1000
+storageEngineList=127.0.0.1#6667#parquet#dir=pd#iginx_port=6888#has_data=false#is_read_only=false#thrift_timeout=30000#thrift_pool_max_size=100#thrift_pool_min_evictable_idle_time_millis=600000#write.buffer.size=104857600#write.batch.size=1048576#compact.permits=16#cache.capacity=1073741824#parquet.block.size=134217728#parquet.page.size=8192#parquet.compression=SNAPPY
+#storageEngineList=127.0.0.1#27017#mongodb#has_data=false#dummy.sample.size=0
 #storageEngineList=127.0.0.1#6667#filesystem#dir=/path/to/your/filesystem#dummy_dir=/path/to/your/data#iginx_port=6888#chunk_size_in_bytes=1048576#memory_pool_size=100#has_data=false#is_read_only=false#thrift_timeout=5000#thrift_pool_max_size=100#thrift_pool_min_evictable_idle_time_millis=600000
 #storageEngineList=127.0.0.1#6379#redis#has_data=false#is_read_only=false#timeout=5000
 
@@ -51,7 +51,7 @@ maxCachedPhysicalTaskPerStorage=500
 queryOptimizer=rbo
 
 # 优化器规则
-ruleBasedOptimizer=NotFilterRemoveRule=on,FragmentPruningByFilterRule=on,ColumnPruningRule=on,FragmentPruningByPatternRule=on
+ruleBasedOptimizer=NotFilterRemoveRule=on,FragmentPruningByFilterRule=on,ColumnPruningRule=on,FragmentPruningByPatternRule=on,ConstantPropagationRule=on,FilterConstantFoldingRule=on,RowTransformConstantFoldingRule=on
 
 # ParallelFilter触发行数
 parallelFilterThreshold=10000
@@ -199,10 +199,10 @@ asyncRestThreadPool=100
 ##########################
 # python脚本启动命令，建议使用"which python"查询出的绝对路径，如下所示
 #pythonCMD=/Library/Frameworks/Python.framework/Versions/3.7/bin/python3
-pythonCMD=python3
+pythonCMD=python
 
 # 是否初始化配置文件内指定的UDF/Transform
-needInitBasicUDFFunctions=false
+needInitBasicUDFFunctions=true
 
 ##########################
 ### Transform配置
