--- a/dataSources/postgresql/pom.xml
+++ b/dataSources/postgresql/pom.xml
@@ -24,6 +24,12 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
+        <dependency>
+            <groupId>org.example</groupId>
+            <artifactId>RelationAbstract</artifactId>
+            <version>0.6.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
