--- a/pom.xml
+++ b/pom.xml
@@ -104,6 +104,11 @@
             </dependency>
             <dependency>
                 <groupId>cn.edu.tsinghua</groupId>
+                <artifactId>RelationAbstract</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.edu.tsinghua</groupId>
                 <artifactId>redis</artifactId>
                 <version>${project.version}</version>
             </dependency>
