--- a/dataSources/postgresql/pom.xml
+++ b/dataSources/postgresql/pom.xml
@@ -25,10 +25,8 @@
             <artifactId>postgresql</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.example</groupId>
+            <groupId>cn.edu.tsinghua</groupId>
             <artifactId>RelationAbstract</artifactId>
-            <version>0.6.0-SNAPSHOT</version>
-            <scope>compile</scope>
         </dependency>
     </dependencies>
 
