--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -28,7 +28,7 @@ FileSystem_mock=127.0.0.1#6667#FileSystem#dir=test/iginx_mn#dummy_dir=/path/to/y
 IoTDB12_class=cn.edu.tsinghua.iginx.iotdb.IoTDBStorage
 InfluxDB_class=cn.edu.tsinghua.iginx.influxdb.InfluxDBStorage
 Parquet_class=cn.edu.tsinghua.iginx.parquet.ParquetStorage
-PostgreSQL_class=cn.edu.tsinghua.iginx.postgresql.PostgreSQLStorage
+PostgreSQL_class=cn.edu.tsinghua.iginx.relational.PostgreSQLStorage
 MongoDB_class=cn.edu.tsinghua.iginx.mongodb.MongoDBStorage
 Redis_class=cn.edu.tsinghua.iginx.redis.RedisStorage
 FileSystem_class=cn.edu.tsinghua.iginx.filesystem.FileSystemStorage
