check in filesystem

--- a/core/src/main/resources/file-permission.properties
+++ b/core/src/main/resources/file-permission.properties
@@ -75,10 +75,11 @@
 #  The rule name is used to distinguish different rules. Different modules
 #  determine the subset of rules used by filter. In details:
 #
-#    * the udf module uses rules starting with "udf"
-#    * the transform module uses rules starting with "transformer".
 #    * the default module uses rules starting with "default".
 #      + the rules of the default module is applied to all modules.
+#    * the udf module uses rules starting with "udf"
+#    * the transform module uses rules starting with "transformer".
+#    * the filesystem driver uses rules starting with "filesystem".
 #
 # Rule Application Order:
 #   1. For the same user, the rules are applied in the order of the configuration
