将pg对接层类改为relational类的组件

--- a/assembly/pom.xml
+++ b/assembly/pom.xml
@@ -60,7 +60,7 @@
         </dependency>
         <dependency>
             <groupId>cn.edu.tsinghua</groupId>
-            <artifactId>postgresql</artifactId>
+            <artifactId>relational</artifactId>
         </dependency>
         <dependency>
             <groupId>cn.edu.tsinghua</groupId>
