--- a/dataSources/relational/pom.xml
+++ b/dataSources/relational/pom.xml
@@ -23,6 +23,12 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
         </dependency>
+        <dependency>
+            <groupId>com.zaxxer</groupId>
+            <artifactId>HikariCP</artifactId>
+            <version>2.4.7</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
     <build>
