修改测试配置文件

--- a/test/src/test/resources/testConfig.properties
+++ b/test/src/test/resources/testConfig.properties
@@ -1,6 +1,7 @@
 # the storage engine that you want to test
 #storageEngineList=iotdb12
 storageEngineList=IoTDB12,InfluxDB,Parquet,Relational,MongoDB,Redis,FileSystem
+relationalStorageEngineList=PostgreSQL,MySQL
 
 # the test for every engine
 test-list=DataSourceIT,SQLSessionIT,SQLSessionPoolIT,SQLCompareIT,NewSessionIT,TagIT,RestAnnotationIT,RestIT,TransformIT,UDFIT,SessionV2IT,SessionIT,SessionPoolIT,CompactionIT,TimePrecisionIT
