fix mysql datatype

--- a/dataSources/relational/src/main/resources/mysql-meta-template.properties
+++ b/dataSources/relational/src/main/resources/mysql-meta-template.properties
@@ -20,13 +20,20 @@ upsert_conflict_statement= %s = VALUES(%s)
 database_query_sql=SELECT SCHEMA_NAME AS datname FROM information_schema.schemata;
 
 # 配置MySQL DataTypeTransformer
-TINYINT=BOOLEAN
-SMALLINT=INTEGER
-MEDIUMINT=INTEGER
-INT=INTEGER
-BIGINT=LONG
-INTEGER=INTEGER
-FLOAT=FLOAT
-DOUBLE=DOUBLE
-BOOLEAN=TINYINT
-LONG=BIGINT
+TINYINT=IGinX-BOOLEAN
+SMALLINT=IGinX-INTEGER
+MEDIUMINT=IGinX-INTEGER
+INT=IGinX-INTEGER
+BIGINT=IGinX-LONG
+INTEGER=IGinX-INTEGER
+FLOAT=IGinX-FLOAT
+DOUBLE=IGinX-DOUBLE
+DECIMAL=IGinX-DOUBLE
+
+
+IGinX-INTEGER=INTEGER
+IGinX-FLOAT=FLOAT(12,6)
+IGinX-DOUBLE=DOUBLE(22,11)
+IGinX-BOOLEAN=TINYINT
+IGinX-BINARY=TEXT
+IGinX-LONG=BIGINT
