--- a/docker/onlyIginx/Dockerfile-iginx
+++ b/docker/onlyIginx/Dockerfile-iginx
@@ -1,12 +1,20 @@
 FROM maven:3-amazoncorretto-8 AS builder
 COPY . /root/iginx
 WORKDIR /root/iginx
-RUN mvn clean package -DskipTests
+RUN mvn clean package -DskipTests -P-format
 
 FROM openjdk:11-jre-slim
 COPY --from=builder /root/iginx/core/target/iginx-core-0.6.0-SNAPSHOT /iginx
+# 安装 Python 3.8, pip 并安装所需的 Python 包
+
+RUN apt-get update && \
+    apt-get install -y python3 python3-pip && \
+    python3 -m pip install --upgrade pip && \
+    python3 -m pip install --no-cache-dir pandas numpy pemja thrift
 
 EXPOSE 6888
 VOLUME /iginx/logs
 ENV PATH="/iginx/sbin/:${PATH}"
+RUN mkdir -p /usr/lib/python3.9/site-packages
+RUN cp -r /usr/local/lib/python3.9/dist-packages/* /usr/lib/python3.9/site-packages/
 ENTRYPOINT /iginx/sbin/start_iginx.sh > /iginx/logs/iginx.log 2>&1
