--- a/.github/actions/dependence/action.yml
+++ b/.github/actions/dependence/action.yml
@@ -35,8 +35,7 @@ runs:
           shell: bash
           run: |
             brew install docker colima
-            brew install --reinstall qemu
-            colima start
+            brew services start colima
 
         - if: inputs.scope=='all'
           name: Set up Python ${{ inputs.python-version }}
